added rabbitmq connection, publish function
